--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<springframework.version>4.3.1.RELEASE</springframework.version>
-		<jackson.version>2.7.5</jackson.version>
+		<jackson.version>2.7.9.5</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>2.8.11</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -49,7 +49,7 @@
 <dependency>
     <groupId>org.springframework.data</groupId>
     <artifactId>spring-data-jpa</artifactId>
-    <version>1.0.0.RELEASE</version>
+    <version>2.1.0.RELEASE</version>
 </dependency>
 		
 		 <!-- https://mvnrepository.com/artifact/log4j/log4j -->
